# pnmr-chi-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: run_minimal.yaml
examples/run_minimal_output/: susceptibility_tensor_10_280K_to_300K.csv  susceptibility_tensor_1_280K_to_300K.csv  susceptibility_tensor_2_280K_to_300K.csv  susceptibility_tensor_3_280K_to_300K.csv  susceptibility_tensor_4_280K_to_300K.csv  susceptibility_tensor_5_280K_to_300K.csv  susceptibility_tensor_6_280K_to_300K.csv  susceptibility_tensor_7_280K_to_300K.csv  susceptibility_tensor_8_280K_to_300K.csv  susceptibility_tensor_9_280K_to_300K.csv
src/pnmr_chi_gen/: __init__.py  __version__.py
src/pnmr_chi_gen/app/pipelines/: __init__.py  generate.py
src/pnmr_chi_gen/cfg/: __init__.py  config.py
src/pnmr_chi_gen/cli/: __init__.py  main.py  set_logging.py
src/pnmr_chi_gen/core/: __init__.py
src/pnmr_chi_gen/core/constraints/: __init__.py  physical.py  sampling.py
src/pnmr_chi_gen/core/domain/: __init__.py  samples.py  tensors.py
src/pnmr_chi_gen/core/generators/: __init__.py  priors.py  temperature_dependence.py  tensor_series.py
src/pnmr_chi_gen/core/parameterizations/: __init__.py  isoaxrho.py
src/pnmr_chi_gen/core/rotations/: euler_zyz.py
src/pnmr_chi_gen/io/: __init__.py  csv_utils.py  paranmr.py
tests/unit/: test_config.py  test_constraints.py  test_domain.py  test_export.py  test_generators.py
